--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@nicky-lenaers/ngx-scroll-to": "^0.5.0",
+    "angular-scroll": "^1.0.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "ng2-smooth-scroll": "^1.0.1",
