--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -25,6 +25,7 @@
     "angular-scroll": "^1.0.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ng-lazyload-image": "^3.4.2",
     "ng2-smooth-scroll": "^1.0.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
